# jx

./: .gitignore  README.rst  filelist.txt  pyproject.toml
data/: lightcurve.json  nyc.json  nyc_subset_data.csv
data/scotland/: scotland.csv  scotland.dbf  scotland.json  scotland.prj  scotland.shp  scotland.shx
dr3_scripts/: add_positions_dust.py  generate_catalog.py  generate_catalog_full.py  get_velocities.py  merge_catalogs.py
jx/: attention.py  funcs.py  spatial.py  stax.py  transformer.py  types.py  utils.py
jx/stanmodels/: bym_predictor_plus_offset  bym_predictor_plus_offset.hpp  bym_predictor_plus_offset.stan  counts  counts.hpp  counts.stan  counts_kriging  counts_kriging.hpp  counts_kriging.stan  gpbffg_matern  gpbffg_matern.hpp  gpbffg_matern.stan
notebooks/: Query_Gaia_XPContinuous.ipynb  Untitled-Copy1.ipynb  Untitled.ipynb  bym2_nyc_old.ipynb  dr3.ipynb  flow.ipynb  gp.ipynb  hnsw-regression.ipynb  mesh.ipynb  mortality.ipynb  nn_ode_solver.ipynb  scotland.ipynb  sde.ipynb
notebooks/.ipynb_checkpoints/: nn_ode_solver-checkpoint.ipynb
notebooks/dr3/: exploring-data.ipynb  pre-hike.ipynb  results.ipynb  where-it-happened.ipynb
scripts/: flow.py
tests/: test_jx.py
